Pretty print Traktor collection and history files

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,5 @@ console_scripts =
     stemtag = cli.stemtag:main
     stemcopy = cli.stemcopy:main
     ableton = cli.ableton:main
+    pretty-collection = cli.pretty_collection:main
+    pretty-history = cli.pretty_history:main
