--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stemgen
-version = 0.0.1
+version = 1.0.0
 author = Axel Delafosse
 author_email = axeldelafosse@gmail.com
 description = Stemgen is a Stem file generator. Convert any track into a stem and have fun with Traktor.
@@ -34,3 +34,4 @@ console_scripts =
     ableton = cli.ableton:main
     pretty-collection = cli.pretty_collection:main
     pretty-history = cli.pretty_history:main
+    pretty-playlists = cli.pretty_playlists:main
