--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stemgen
-version = 2.0.3
+version = 2.0.4
 author = Axel Delafosse
 author_email = axeldelafosse@gmail.com
 description = Stemgen is a Stem file generator. Convert any track into a stem and have fun with Traktor.
@@ -30,7 +30,7 @@ install_requires =
     opencv-python
 
 [options.package_data]
-* = *.json, ni-stem/**/*
+* = *.json, *.png, ni-stem/**/*
 
 [options.entry_points]
 console_scripts =
