--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stemgen
-version = 2.0.7
+version = 2.0.8
 author = Axel Delafosse
 author_email = axeldelafosse@gmail.com
 description = Stemgen is a Stem file generator. Convert any track into a stem and have fun with Traktor.
@@ -28,6 +28,7 @@ install_requires =
     pyautogui
     pylive
     opencv-python
+    ffmpeg-python
 
 [options.package_data]
 * = *.json, *.png, ni-stem/**/*
