--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stemgen
-version = 2.0.8
+version = 2.0.10
 author = Axel Delafosse
 author_email = axeldelafosse@gmail.com
 description = Stemgen is a Stem file generator. Convert any track into a stem and have fun with Traktor.
@@ -29,6 +29,13 @@ install_requires =
     pylive
     opencv-python
     ffmpeg-python
+    # Windows UI Automation
+    pywinauto; platform_system == "Windows"
+    # macOS
+    pyobjc-core; platform_system == "Darwin"
+    pyobjc; platform_system == "Darwin"
+    Pillow; platform_system == "Darwin"
+
 
 [options.package_data]
 * = *.json, *.png, ni-stem/**/*
